# codex_lab

./: .dockerignore  .gitignore  Dockerfile  README.md  generate_dockerfile.py  koyeb.yaml  requirements.txt  test_dockerfile_gen.py
projectplanner/: .env.example  README.md  __init__.py  config.py  logging_utils.py  models.py  pyproject.toml
projectplanner/agents/: __init__.py  _openai_helpers.py  coordinator_agent.py  decomposer_agent.py  planner_agent.py  reviewer_agent.py  schemas.py
projectplanner/api/: __init__.py  main.py
projectplanner/api/routers/: __init__.py  orchestrator.py  prompts.py
projectplanner/evals/: promptfoo.yaml
projectplanner/orchestrator/: __init__.py  config.py  graph_store.py  models.py  workflow.py
projectplanner/orchestrator/agents/: __init__.py  agent_planner.py  graph_audit_agent.py  milestones_agent.py
projectplanner/services/: __init__.py  ingest.py  observability.py  orchestrator.py  plan.py  review.py  store.py
projectplanner/tests/: conftest.py  test_api.py  test_decomposer_agent.py  test_ingest.py  test_plan_service.py  test_planner_density.py
projectplanner/ui/: next.config.js  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
projectplanner/ui/components/: AppLayout.tsx  LoggingPanel.tsx  ObservabilityDashboard.tsx  OrchestratorPanel.tsx  PromptLogPanel.tsx  PromptTable.tsx
projectplanner/ui/lib/: api.ts
projectplanner/ui/pages/: _app.tsx  index.tsx
projectplanner/ui/styles/: globals.css
projectplanner/ui/tests/: HomePageExport.test.tsx  PromptTable.test.tsx
(+4 files in other folders)
