[project]
name = "projectplanner"
version = "0.1.0"
description = "Document-driven coding conductor API and agent toolkit"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "The Coding Conductor Team" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "pydantic>=1.10.13,<3",
  "sqlalchemy>=2.0.25",
  "python-multipart>=0.0.6",
  "httpx>=0.25.0",
  "python-docx>=0.8.11",
  "pypdf>=3.17.0",
  "python-dotenv>=1.0.0",
  "openai>=1.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.1",
]

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
asyncio_mode = "auto"
pythonpath = ["."]
